kubernetes/apps/reciept/base/01-test/01-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: reciept
  name: test-reciept-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`test.reciept.kalexlab.xyz`)
      services:
        - name: test-service
          port: 8000
  tls:
    secretName: test-reciept-ingress-certificate-secret
